--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8081
 spring:
   mvc:
     pathmatch:
@@ -8,9 +8,14 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/agri?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+    url: jdbc:mysql://localhost:3306/agirecommend
     username: root
-    password: 667293abC
+    password: root
+
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 100MB
 
 #mybatis配置
 mybatis:
