--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,13 @@
             <artifactId>hutool-all</artifactId>
             <version>5.8.23</version>
         </dependency>
+        <!--devtools热部署-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+            <scope>true</scope>
+        </dependency>
 
     </dependencies>
 
