--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,9 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+  devtools:
+    restart:
+      enabled: true
 
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
